--- a/projects/awesome-widgets.html
+++ b/projects/awesome-widgets.html
@@ -136,394 +136,492 @@ sudo make install
 <b>NOTE</b> The numbering of all arrays in variables starts at 0.</p>
 <table>
   <tr>
+    <th>Type</th>
+    <th>Tag</th>
+    <th>Description</th>
+    <th>Since</th>
+  </tr>
+  <tr>
     <th rowspan="5">Time</th>
     <td><code>$time</code></td>
     <td>Time in default format. For example, <code>fri Nov 6 04:48:01 2013</code>.</td>
+    <td>1.5.1</td>
   </tr>
   <tr>
     <td><code>$isotime</code></td>
     <td>Time in ISO format.</td>
+    <td>1.5.2</td>
   </tr>
   <tr>
     <td><code>$shorttime</code></td>
     <td>Time in short locale format.</td>
+    <td>1.5.2</td>
   </tr>
   <tr>
     <td><code>$longtime</code></td>
     <td>Time in long locale format.</td>
+    <td>1.5.2</td>
   </tr>
   <tr>
     <td><code>$ctime</code></td>
     <td>Will enable custom time format.</td>
+    <td>2.0.0</td>
   </tr>
   <tr>
     <th rowspan="2">Uptime</th>
     <td><code>$uptime</code></td>
     <td>System uptime, <code>---d--h--m</code>.</td>
+    <td></td>
   </tr>
   <tr>
     <td><code>$cuptime</code></td>
     <td>Will enable custom uptime format.</td>
+    <td>2.0.0</td>
   </tr>
   <tr>
     <th rowspan="3">Load average</th>
     <td><code>$la1</code></td>
     <td>Load average over 1 min, <code>-----</code>.</td>
+    <td>2.4.0</td>
   </tr>
   <tr>
     <td><code>$la5</code></td>
     <td>Load average over 5 min, <code>-----</code>.</td>
+    <td>2.4.0</td>
   </tr>
   <tr>
     <td><code>$la15</code></td>
     <td>Load average over 15 min, <code>-----</code>.</td>
+    <td>2.4.0</td>
   </tr>
   <tr>
     <th rowspan="2">CPU</th>
     <td><code>$cpu</code></td>
     <td>Total load CPU, %, <code>-----</code>.</td>
+    <td></td>
   </tr>
   <tr>
     <td><code>$cpuN</code></td>
     <td>Load CPU for core N, %, <code>-----</code>.</td>
+    <td>1.7.0</td>
   </tr>
   <tr>
     <th rowspan="2">CPU clock</th>
     <td><code>$cpucl</code></td>
     <td>Average CPU clock, MHz, <code>----</code>.</td>
+    <td>1.1.2</td>
   </tr>
   <tr>
     <td><code>$cpuclN</code></td>
     <td>CPU clock for core N, MHz, <code>----</code>.</td>
+    <td>1.7.0</td>
   </tr>
   <tr>
     <th rowspan="1">Temperature</th>
     <td><code>$tempN</code></td>
     <td>Temperature for device N, <code>----</code>. For example, <code>$temp0</code>.</td>
+    <td></td>
   </tr>
   <tr>
     <th rowspan="1">GPU</th>
     <td><code>$gpu</code></td>
     <td>GPU usage, %, <code>-----</code>. <code>aticonfig</code> or <code>nvidia-smi</code> must be installed.</td>
+    <td>1.3.2</td>
   </tr>
   <tr>
     <th rowspan="1">GPU temperature</th>
     <td><code>$gputemp</code></td>
     <td>GPU temperature, <code>----</code>. <code>aticonfig</code> or <code>nvidia-smi</code> must be installed.</td>
+    <td>1.3.2</td>
   </tr>
   <tr>
     <th rowspan="9">Memory</th>
     <td><code>$mem</code></td>
     <td>Memory usage, %, <code>-----</code>.</td>
+    <td></td>
   </tr>
   <tr>
     <td><code>$memmb</code></td>
     <td>Memory usage, MB, <code>-----</code>.</td>
+    <td>1.1.1</td>
   </tr>
   <tr>
     <td><code>$memgb</code></td>
     <td>Memory usage, GB, <code>----</code>.</td>
+    <td>1.7.3</td>
   </tr>
   <tr>
     <td><code>$memfreemb</code></td>
     <td>Free memory, MB, <code>-----</code>.</td>
+    <td>2.0.0</td>
   </tr>
   <tr>
     <td><code>$memfreegb</code></td>
     <td>Free memory, GB, <code>----</code>.</td>
+    <td>2.0.0</td>
   </tr>
   <tr>
     <td><code>$memtotmb</code></td>
     <td>RAM, MB, <code>-----</code>.</td>
+    <td>1.10.0</td>
   </tr>
   <tr>
     <td><code>$memtotgb</code></td>
     <td>RAM, GB, <code>----</code>.</td>
+    <td>1.10.0</td>
   </tr>
   <tr>
     <td><code>$memusedmb</code></td>
     <td>Used and cached memory, MB, <code>-----</code>.</td>
+    <td>2.0.0</td>
   </tr>
   <tr>
     <td><code>$memusedgb</code></td>
     <td>Used and cached memory, GB, <code>----</code>.</td>
+    <td>2.0.0</td>
   </tr>
   <tr>
     <th rowspan="7">Swap</th>
     <td><code>$swap</code></td>
     <td>Swap usage, %, <code>-----</code>.</td>
+    <td></td>
   </tr>
   <tr>
     <td><code>$swapmb</code></td>
     <td>Swap usage, MB, <code>-----</code>.</td>
+    <td>1.1.1</td>
   </tr>
   <tr>
     <td><code>$swapgb</code></td>
     <td>Swap usage, GB, <code>----</code>.</td>
+    <td>1.7.3</td>
   </tr>
   <tr>
     <td><code>$swapfreemb</code></td>
     <td>Free swap, MB, <code>-----</code>.</td>
+    <td>2.0.0</td>
   </tr>
   <tr>
     <td><code>$swapfreegb</code></td>
     <td>Free swap, GB, <code>----</code>.</td>
+    <td>2.0.0</td>
   </tr>
   <tr>
     <td><code>$swaptotmb</code></td>
     <td>Swap, MB, <code>-----</code>.</td>
+    <td>1.10.0</td>
   </tr>
   <tr>
     <td><code>$swaptotgb</code></td>
     <td>Swap, GB, <code>----</code>.</td>
+    <td>1.10.0</td>
   </tr>
   <tr>
     <th rowspan="7">HDD usage</th>
     <td><code>$hddN</code></td>
     <td>Usage for mount point N, %, <code>-----</code>. For example <code>$hdd0</code>.</td>
+    <td>1.3.2</td>
   </tr>
   <tr>
     <td><code>$hddmbN</code></td>
     <td>Usage for mount point N, MB, <code>-----</code>. For example <code>$hddmb0</code>.</td>
+    <td>1.8.0</td>
   </tr>
   <tr>
     <td><code>$hddgbN</code></td>
     <td>Usage for mount point N, GB, <code>-----</code>. For example <code>$hddgb0</code>.</td>
+    <td>1.8.0</td>
   </tr>
   <tr>
     <td><code>$hddfreembN</code></td>
     <td>Free space for mount point N, MB, <code>-----</code>. For example <code>$hddfreemb0</code>.</td>
+    <td>2.0.0</td>
   </tr>
   <tr>
     <td><code>$hddfreegbN</code></td>
     <td>Free space for mount point N, GB, <code>-----</code>. For example <code>$hddfreegb0</code>.</td>
+    <td>2.0.0</td>
   </tr>
   <tr>
     <td><code>$hddtotmbN</code></td>
     <td>Total size of mount point N, MB, <code>-----</code>. For example <code>$hddtotmb0</code>.</td>
+    <td>1.10.0</td>
   </tr>
   <tr>
     <td><code>$hddtotgbN</code></td>
     <td>Total size of mount point N, GB, <code>-----</code>. For example <code>$hddtotgb0</code>.</td>
+    <td>1.10.0</td>
   </tr>
   <tr>
     <th rowspan="2">HDD speed</th>
     <td><code>$hddrN</code></td>
     <td>Read speed of disk N, KB/s, <code>-----</code>. For example <code>$hddr0</code>.</td>
+    <td>1.9.0</td>
   </tr>
   <tr>
     <td><code>$hddwN</code></td>
     <td>Write speed of disk N, KB/s, <code>-----</code>. For example <code>$hddw0</code>.</td>
+    <td>1.9.0</td>
   </tr>
   <tr>
     <th rowspan="1">HDD temperature</th>
     <td><code>$hddtempN</code></td>
-    <td>Temperature for HDD N, <code>----</code>. For example <code>$hddtemp0</code>. <code>hddtemp</code> must be installed.</td>
+    <td>Temperature for HDD N, <code>----</code>. For example <code>$hddtemp0</code>. <code>hddtemp</code> or <code>smartmontools</code> must be installed.</td>
+    <td>1.7.0</td>
   </tr>
   <tr>
     <th rowspan="13">Network</th>
     <td><code>$down</code></td>
     <td>Download speed for active device, KB/s or MB/s, <code>----</code>.</td>
+    <td>1.7.0</td>
   </tr>
   <tr>
     <td><code>$downkb</code></td>
     <td>Download speed for active device, KB/s, <code>----</code>.</td>
+    <td>2.4.1</td>
   </tr>
   <tr>
     <td><code>$downunits</code></td>
     <td>Download speed units for active device, <code>----</code>.</td>
+    <td>2.4.1</td>
   </tr>
   <tr>
     <td><code>$downN</code></td>
     <td>Download speed for device N, KB/s or MB/s, <code>----</code>.</td>
+    <td>2.2.0</td>
   </tr>
   <tr>
     <td><code>$downkbN</code></td>
     <td>Download speed for device N, KB/s, <code>----</code>.</td>
+    <td>2.4.1</td>
   </tr>
   <tr>
     <td><code>$downunitsN</code></td>
     <td>Download speed units for device N, <code>----</code>.</td>
+    <td>2.4.1</td>
   </tr>
   <tr>
     <td><code>$up</code></td>
     <td>Upload speed for active device, KB/s or MB/s, <code>----</code>.</td>
+    <td>1.7.0</td>
   </tr>
   <tr>
     <td><code>$upkb</code></td>
     <td>Upload speed for active device, KB/s, <code>----</code>.</td>
+    <td>2.4.1</td>
   </tr>
   <tr>
     <td><code>$upunits</code></td>
     <td>Upload speed units for active device, <code>----</code>.</td>
+    <td>2.4.1</td>
   </tr>
   <tr>
     <td><code>$upN</code></td>
     <td>Upload speed for device N, KB/s or MB/s, <code>----</code>.</td>
+    <td>2.2.0</td>
   </tr>
   <tr>
     <td><code>$upkbN</code></td>
     <td>Upload speed for device N, KB/s, <code>----</code>.</td>
+    <td>2.4.1</td>
   </tr>
   <tr>
     <td><code>$upunitsN</code></td>
     <td>Upload speed units for device N, <code>----</code>.</td>
+    <td>2.4.1</td>
   </tr>
   <tr>
     <td><code>$netdev</code></td>
     <td>Current network device.</td>
+    <td>1.1.1</td>
   </tr>
   <tr>
     <th rowspan="3">Battery</th>
     <td><code>$bat</code></td>
     <td>Average battery charge, %, <code>---</code>.</td>
+    <td></td>
   </tr>
   <tr>
     <td><code>$batN</code></td>
     <td>Battery N charge, %, <code>---</code>.</td>
+    <td>2.0.3</td>
   </tr>
   <tr>
     <td><code>$ac</code></td>
     <td>Status of AC device. Returns <code>(*)</code> if AC device is online or <code>( )</code> if offline.</td>
+    <td></td>
   </tr>
   <tr>
     <th rowspan="11">Music player</th>
     <td><code>$album</code></td>
     <td>Current song album. One of supported music players must be installed.</td>
+    <td>1.5.3</td>
   </tr>
   <tr>
     <td><code>$dalbum</code></td>
     <td>Current song album with fixed symbols count shown as a running line.</td>
+    <td>2.4.1</td>
   </tr>
   <tr>
     <td><code>$salbum</code></td>
     <td>Current song album with fixed symbols count shown with three dots at the end.</td>
+    <td>2.4.1</td>
   </tr>
   <tr>
     <td><code>$artist</code></td>
     <td>Current song artist. One of supported music players must be installed.</td>
+    <td>1.5.0</td>
   </tr>
   <tr>
     <td><code>$dartist</code></td>
     <td>Current song artist with fixed symbols count shown as a running line.</td>
+    <td>2.4.1</td>
   </tr>
   <tr>
     <td><code>$sartist</code></td>
     <td>Current song artist with fixed symbols count shown with three dots at the end.</td>
+    <td>2.4.1</td>
   </tr>
   <tr>
     <td><code>$duration</code></td>
     <td>Current song duration. One of supported music players must be installed.</td>
+    <td>2.0.0</td>
   </tr>
   <tr>
     <td><code>$progress</code></td>
     <td>Current song progress. One of supported music players must be installed.</td>
+    <td>1.5.3</td>
   </tr>
   <tr>
     <td><code>$title</code></td>
     <td>Current song title. One of supported music players must be installed.</td>
+    <td>1.5.0</td>
   </tr>
   <tr>
     <td><code>$dtitle</code></td>
     <td>Current song title with fixed symbols count shown as a running line.</td>
+    <td>2.4.1</td>
   </tr>
   <tr>
     <td><code>$stitle</code></td>
     <td>Current song title with fixed symbols count shown with three dots at the end.</td>
+    <td>2.4.1</td>
   </tr>
   <tr>
     <th rowspan="3">Process</th>
     <td><code>$ps</code></td>
     <td>List of running processes comma separated.</td>
+    <td>1.8.0</td>
   </tr>
   <tr>
     <td><code>$pscount</code></td>
     <td>Number of running processes.</td>
+    <td>1.8.0</td>
   </tr>
   <tr>
     <td><code>$pstotal</code></td>
     <td>Total number of processes.</td>
+    <td>1.8.0</td>
   </tr>
   <tr>
     <th rowspan="1">Package manager</th>
     <td><code>$pkgcountN</code></td>
     <td>Number of packages, which available to upgrade for command N.</td>
+    <td>1.8.0</td>
   </tr>
   <tr>
     <th rowspan="1">Custom</th>
     <td><code>$customN</code></td>
     <td>Get output from custom command N. For example <code>$custom0</code>.</td>
+    <td>1.9.0</td>
   </tr>
   <tr>
     <th rowspan="3">Desktop</th>
     <td><code>$desktop</code></td>
     <td>Name of the current desktop.</td>
+    <td>2.0.0</td>
   </tr>
   <tr>
     <td><code>$ndesktop</code></td>
     <td>Number of the current desktop.</td>
+    <td>2.0.0</td>
   </tr>
   <tr>
     <td><code>$tdesktops</code></td>
     <td>Total number of desktops.</td>
+    <td>2.0.0</td>
   </tr>
   <tr>
     <th rowspan="9">Quotes</th>
     <td><code>$askN</code></td>
     <td>Get ask for ticker N. For example <code>$ask0</code>.</td>
+    <td>2.2.2</td>
   </tr>
   <tr>
     <td><code>$askchgN</code></td>
     <td>Get absolute ask change for ticker N. For example <code>$askchg0</code>.</td>
+    <td>2.2.2</td>
   </tr>
   <tr>
     <td><code>$percaskchgN</code></td>
     <td>Get ask change for ticker N, %. For example <code>$percaskchg0</code>.</td>
+    <td>2.2.2</td>
   </tr>
   <tr>
     <td><code>$bidN</code></td>
     <td>Get bid for ticker N. For example <code>$bid0</code>.</td>
+    <td>2.2.2</td>
   </tr>
   <tr>
     <td><code>$bidchgN</code></td>
     <td>Get absolute bid change for ticker N, %. For example <code>$bidchg0</code>.</td>
+    <td>2.2.2</td>
   </tr>
   <tr>
     <td><code>$percbidchgN</code></td>
     <td>Get bid change for ticker N. For example <code>$percbidchg0</code>.</td>
+    <td>2.2.2</td>
   </tr>
   <tr>
     <td><code>$priceN</code></td>
     <td>Get price for ticker N. For example <code>$price0</code>.</td>
+    <td>2.2.2</td>
   </tr>
   <tr>
     <td><code>$pricechgN</code></td>
     <td>Get absolute price change for ticker N. For example <code>$pricechg0</code>.</td>
+    <td>2.2.2</td>
   </tr>
   <tr>
     <td><code>$percaskchgN</code></td>
     <td>Get price change for ticker N, %. For example <code>$percpricechg0</code>.</td>
+    <td>2.2.2</td>
   </tr>
   <tr>
     <th rowspan="5">Weather</th>
     <td><code>$weatherIdN</code></td>
     <td>Numerical weather ID. For example <code>$weatherId0</code>.</td>
+    <td>2.4.0</td>
   </tr>
   <tr>
     <td><code>$weatherN</code></td>
-    <td>UTF symbol for weather ID. For example <code>$weather0</code>.</td>
+    <td>Weather status. For example <code>$weather0</code>.</td>
+    <td>2.4.0</td>
   </tr>
   <tr>
     <td><code>$humidityN</code></td>
     <td>Humidity, %. For example <code>$humidity0</code>.</td>
+    <td>2.4.0</td>
   </tr>
   <tr>
     <td><code>$pressureN</code></td>
     <td>Pressure, bars. For example <code>$pressure0</code>.</td>
+    <td>2.4.0</td>
   </tr>
   <tr>
     <td><code>$temperatureN</code></td>
     <td>Temperature. For example <code>$temperature0</code>.</td>
+    <td>2.4.0</td>
   </tr>
 </table>
 
