--- a/ru/projects/awesome-widgets.html
+++ b/ru/projects/awesome-widgets.html
@@ -567,15 +567,27 @@ $down - $up
 <p>покажет разность между скоростями загрузки и отдачи. Таким образом, лямбда выражения могут быть использованы, например, чтобы показывать произвольное значение, которое будет рассчитано в рантайме, или, чтобы показать различную информацию, в зависимости от некоторых условий. Однако, пожалуйста, учитывайте, что подобные вычисления в рантайме могут увеличить нагрузку на CPU.</p>
 
 <h4><a href="#advanced" class="anchor" id="advanced"><span class="octicon octicon-link"></span></a>Расширенные настройки</h4>
+<p><b>Включить фон:</b> Снимите галочку, чтобы отключить стандартный фон виджета и установить прозрачный. По умолчанию <code>true</code>.</p>
+
+<p><b>Переводить строки:</b> Переводить или нет строковые теги. По умолчанию <code>true</code>.</p>
+
+<p><b>Заменить символ перевода строки:</b> Заменить <code>\n</code> на <code>&#60;br&#62;</code>. По умолчанию <code>false</code>.</p>
+
+<p><b>Перенос слов:</b> Включить перенос слов. По умолчанию <code>false</code>.</p>
+
+<p><b>Включить всплывающие сообщения:</b> Снимите галочку, если вы не хотите всплывающих сообщений на системные события. По умолчанию <code>true</code>.</p>
+
+<p><b>Проверять обновления:</b> Проверять или нет обновления при запуске. По умолчанию <code>true</code>.</p>
+
 <p><b>Высота виджета:</b> Отключит автоматическое определение высоты виджета и установит ее в данное значение. По умолчанию <code>0</code> (автоматически).</p>
 
 <p><b>Ширина виджета:</b> Отключит автоматическое определение ширины виджета и установит ее в данное значение. По умолчанию <code>0</code> (автоматически).</p>
 
-<p><b>Заменить символ перевода строки:</b> Заменить <code>\n</code> на <code>&#60;br&#62;</code>. По умолчанию <code>false</code>.</p>
+<p><b>Интервал обновления:</b> Интервал обновления виджета, мс. По умолчанию <code>1000</code>.</p>
 
-<p><b>Включить фон:</b> Снимите галочку, чтобы отключить стандартный фон виджета и установить прозрачный. По умолчанию <code>true</code>.</p>
+<p><b>Очередь сообщений:</b> Использовать указанное количество тредов в пуле. <code>0</code> означает идеальное количество тредов. По умолчанию <code>0</code>.</p>
 
-<p><b>Включить всплывающие сообщения:</b> Снимите галочку, если вы не хотите всплывающих сообщений на системные события. По умолчанию <code>true</code>.</p>
+<p><b>Температурные единицы:</b> Выберете единицы температуры. Доступные единицы следующие: Цельсий, Фаренгейт и Кельвин.</p>
 
 <p><b>Свой формат времени:</b></p>
 <table>
@@ -693,15 +705,9 @@ $down - $up
   </tr>
 </table>
 
-<p><b>Температурные единицы:</b> Выберете единицы температуры. Доступные единицы следующие: Цельсий, Фаренгейт и Кельвин.</p>
-
 <p><b>AC online тег:</b> Строка, которая будет показана, когда AC онлайн. По умолчанию <code>(*)</code>.</p>
 
 <p><b>AC offline тег:</b> Строка, которая будет показана, когда AC оффлайн. По умолчанию <code>( )</code>.</p>
-
-<p><b>Проверять обновления:</b> Проверять или нет обновления при запуске. По умолчанию <code>true</code>.</p>
-
-<p><b>Переводить строки:</b> Переводить или нет строковые теги. По умолчанию <code>true</code>.</p>
 
 <h4><a href="#tooltips" class="anchor" id="tooltips"><span class="octicon octicon-link"></span></a>Тултипы</h4>
 <p>Начиная с версии 1.7.0, поля CPU, частота CPU, память, swap, сеть и батарея поддерживают графический тултип (всплывающая подсказка). Чтобы включить их, просто поставьте нужные галочки. Число хранимых значений может быть установлено во вкладке. Также есть возможность настроить цвета графиков.</p>
@@ -715,35 +721,35 @@ $down - $up
 
 <p><b>Команда hddtemp:</b> Введите команду, которая будет запущена для hddtemp DataEngine. По умолчанию <code>sudo hddtemp</code>.</p>
 
-<p><b>Адрес MPD:</b> Адрес MPD сервера. По умолчанию <code>localhost</code>.</p>
-
-<p><b>Порт MPD:</b> Порт MPD сервера. По умолчанию <code>6600</code>.</p>
-
-<p><b>MPRIS:</b> Выберете имя плеера MPRIS. <code>auto</code> включит автоматическое определение плеера. По умолчанию <code>auto</code>.</p>
+<p><b>Количество символов для плеера:</b> Количество символов, которые будут показываться в динамических тегах плеера.</p>
 
 <p><b>Музыкальный плеер:</b> Выберете один из поддерживаемых музыкальных плееров для соответствующего поля.</p>
 
-<p><b>Количество символов для плеера:</b> Количество символов, которые будут показываться в динамических тегах плеера.</p>
+<p><b>MPRIS:</b> Выберете имя плеера MPRIS. <code>auto</code> включит автоматическое определение плеера. По умолчанию <code>auto</code>.</p>
+
+<p><b>Адрес MPD:</b> Адрес MPD сервера. По умолчанию <code>localhost</code>.</p>
+
+<p><b>Порт MPD:</b> Порт MPD сервера. По умолчанию <code>6600</code>.</p>
 
 <h3><a href="#desktoppanel" class="anchor" id="desktoppanel"><span class="octicon octicon-link"></span></a>Desktop panel</h3>
 <p>Начиная с версии 1.11.0 виджеты предоставляют панель для мониторинга за рабочими столами. И да, он выглядит, как аналогичная панель в Awesome.</p>
 
 <h4><a href="#dpconf" class="anchor" id="dpconf"><span class="octicon octicon-link"></span></a>Настройка Desktop panel</h4>
-<p><b>Высота виджета:</b> Отключит автоматическое определение высоты виджета и установит ее в данное значение. По умолчанию <code>0</code> (автоматически).</p>
-
-<p><b>Ширина виджета:</b> Отключит автоматическое определение ширины виджета и установит ее в данное значение. По умолчанию <code>0</code> (автоматически).</p>
-
-<p><b>Включить тултип:</b> Включать или нет графическое превью выбранного рабочего стола. Вы также должны указать тип превью, по умолчанию <code>Окна</code>.</p>
-
-<p><b>Ширина тултипа:</b> Ширина тултипа в пикселях. По умолчанию <code>200px</code>.</p>
-
-<p><b>Цвет тултипа:</b> Цвет, который будет использован в некоторых типах тултипа. По умолчанию <code>#ffffff</code>.</p>
-
 <p><b>Включить фон:</b> Снимите галочку, чтобы отключить стандартный фон виджета и установить прозрачный. По умолчанию <code>true</code>.</p>
 
 <p><b>Вертикальная разметка:</b> Использовать вертикальную разметку вместо горизонтальной. По умолчанию <code>false</code>.</p>
 
+<p><b>Высота виджета:</b> Отключит автоматическое определение высоты виджета и установит ее в данное значение. По умолчанию <code>0</code> (автоматически).</p>
+
+<p><b>Ширина виджета:</b> Отключит автоматическое определение ширины виджета и установит ее в данное значение. По умолчанию <code>0</code> (автоматически).</p>
+
 <p><b>Метка</b> Введите символ (или строку), которая будет показана, если данный рабочий стол сейчас активен.</p>
+
+<p><b>Тип тултипа:</b> Тип превью, по умолчанию <code>Окна</code>.</p>
+
+<p><b>Ширина тултипа:</b> Ширина тултипа в пикселях. По умолчанию <code>200px</code>.</p>
+
+<p><b>Цвет тултипа:</b> Цвет, который будет использован в некоторых типах тултипа. По умолчанию <code>#ffffff</code>.</p>
 
 <p><b>Теги шаблона</b></p>
 <table>
